test_linux/t22/exp4.txt
Reading from file f4.pem...
000000  2d                           00 1 01101
                                     ^^         Tag class:    0 -> Universal
                                        ^       Tag type:     1 -> Constructed
                                          ^^^^^ Tag number:  13 -> RELATIVE-OID
000001  2d                           0 0101101
                                     ^          Len type: 0 -> ONE BYTE
                                       ^^^^^^^  Len: 45
000002  2d                           00 1 01101
                                     ^^         Tag class:    0 -> Universal
                                        ^       Tag type:     1 -> Constructed
                                          ^^^^^ Tag number:  13 -> RELATIVE-OID
000003  2d                           0 0101101
                                     ^          Len type: 0 -> ONE BYTE
                                       ^^^^^^^  Len: 45
000004  2d                           00 1 01101
                                     ^^         Tag class:    0 -> Universal
                                        ^       Tag type:     1 -> Constructed
                                          ^^^^^ Tag number:  13 -> RELATIVE-OID
000005  42                           0 1000010
                                     ^          Len type: 0 -> ONE BYTE
                                       ^^^^^^^  Len: 66
000006  45                           01 0 00101
                                     ^^         Tag class:    1 -> Application
                                        ^       Tag type:     0 -> Primitive
                                          ^^^^^ Tag number:   5 -> [ 5 ]
000007  47                           0 1000111
                                     ^          Len type: 0 -> ONE BYTE
                                       ^^^^^^^  Len: 71
000008  49 4e 20 45    43 20 50 41   IN E  C PA 
000010  52 41 4d 45    54 45 52 53   RAME  TERS 
000018  2d 2d 2d 2d    2d 0a 42 67   ----  -.Bg 
000020  67 71 68 6b    6a 4f 50 51   gqhk  jOPQ 
000028  4d 42 42 77    3d 3d 0a 2d   MBBw  ==.- 
000030  2d 2d 2d 2d    45 4e 44 20   ----  END  
000038  45 43 20 50    41 52 41 4d   EC P  ARAM 
000040  45 54 45 52    53 2d 2d 2d   ETER  S--- 
000048  2d 2d 0a 2d    2d 2d 2d      --.-  ---  
Error: inconsistent items length, position: 79
